--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-hello-roman",
+  "name": "e-commerce",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,9 +8,14 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-modal": "^3.14.3",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
+    "react-toggle": "^4.1.2",
     "styled-components": "^5.3.3",
+    "uui": "^1.0.7",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
